--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,8 @@ jobs:
         if: steps.npm-cache.outputs.cache-hit != 'true'
       - run: npm test
       - run: node scripts/build.js
-
+        env:
+          RG_VERSION: '${{ needs.create-release.outputs.rg_version }}'
       - name: Build archive
         shell: bash
         run: |
